<resources>
    <string name="app_name">PracticaLayouts</string>
    <string name="usuario">Usuario</string>
    <string name="ingrese_su_usuario">Ingrese su usuario</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="reg_strate">Regístrate</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
</resources>